# Fyler

./: README.md
backend/: .gitignore  database.sqlite  pyproject.toml
backend/server/: __init__.py  __main__.py  database.py  server.py  server_routes.py
backend/server/models/: User.py  __init__.py
backend/server/utils/storage_manager/: __init__.py  file_manager.py
backend/tests/: __init__.py  testConfig.json  test_api.py  test_file_manager.py
frontend/: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json
frontend/src/: index.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Input.tsx
frontend/src/components/Layouts/: PageLayout.tsx
frontend/src/components/cards/: FileCard.tsx  Modal.tsx  index.ts
frontend/src/components/context/: AuthContext.tsx
frontend/src/css/: index.css
frontend/src/pages/: PageNotFound.tsx  dashboard.tsx  home.tsx  index.ts  login.tsx  sign_up.tsx
frontend/src/utils/: api.ts  file_icons.tsx  interfaces.tsx
