[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend for the fyler app"
authors = ["Musa Khan <57375561+MusaMoses@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
orm = "^0.3.1"
aiosqlite = "^0.17.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "py -m server"
tests = "server.tests:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
