[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend for the fyler app"
authors = ["Musa Khan <57375561+MusaMoses@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
orm = "^0.3.1"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pytest-asyncio = "^0.18.3"
httpx = "^0.23.0"


[tool.poetry.scripts]
tests = "tests:start_tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
